--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "cli",
   "version": "1.0.0",
   "description": "cli",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client": "node client.js",
+    "test": "ava test"
   },
   "author": "Theodore",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.2.0"
+    "inquirer": "^6.2.0",
+    "ws": "^6.1.0"
+  },
+  "devDependencies": {
+    "ava": "^0.25.0"
   }
 }
